--- a/app.json
+++ b/app.json
@@ -5,7 +5,7 @@
     "version": "1.0.0",
     "scheme": "RecordTrack",
     "orientation": "portrait",
-    "icon": "./assets/pen.png",
+    "icon": "./assets/notes.png",
     "userInterfaceStyle": "light",
     "newArchEnabled": true,
     "splash": {
@@ -18,13 +18,13 @@
     },
     "android": {
       "adaptiveIcon": {
-        "foregroundImage": "./assets/pen.png",
+        "foregroundImage": "./assets/notes.png",
         "backgroundColor": "#ffffff"
       },
       "package": "com.hassan36226.RecordTrack"
     },
     "web": {
-      "favicon": "./assets/pen.png"
+      "favicon": "./assets/notes.png"
     },
     "plugins": [
       "expo-router"
